# enhanced-sre

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  WARP.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-publish.yml
docs/: enhanced-sre-architecture.md  index.md  phase1-observability-documentation.md  phase2-iac-quality.md  phase3-delivery-operations.md
enhanced-sre-architecture/: index.html
inputs/: librechat-plan.md  mcp-server.md
phase1-observability-documentation/: index.html
phase2-iac-quality/: index.html
phase3-delivery-operations/: index.html
search/: search_index.json
src/sre_mcp_toolkit/: __init__.py  __main__.py  cli.py  registry.py  versions.py
tests/: test_versions.py
